# intrisic-learning

./: CMakeLists.txt  README.md
doc/core/: tensor.md
doc/lib/: gemm.md  gemv.md
src/: main.cpp
src/bench/: bench.cpp  bench.h  bench_stats.h
src/core/: tensor.h
src/lib/: gemm.cpp  gemm.h  gemv.cpp  gemv.h
